// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`src/components/shareBoard/shareBoard should match snapshot, Open Board 1`] = `
<div>
  <div
    class="ShareBoardButton"
  >
    <button
      class="Button emphasis--primary size--medium"
      title="Share board"
      type="button"
    >
      <i
        class="CompassIcon icon-globe GlobeIcon"
      />
      <span>
        Share
      </span>
    </button>
  </div>
</div>
`;

exports[`src/components/shareBoard/shareBoard should match snapshot, Private Board 1`] = `
<div>
  <div
    class="ShareBoardButton"
  >
    <button
      class="Button emphasis--primary size--medium"
      title="Share board"
      type="button"
    >
      <i
        class="CompassIcon icon-lock-outline LockOutlineIcon"
      />
      <span>
        Share
      </span>
    </button>
  </div>
</div>
`;
